[tool.poetry]
name = "l2cs"
version = "0.0.1"
description = "l2cs"
authors = ["Yuta Miyaji"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
# acesvision = { git = "ssh://git@github.com/aces-inc/aces-vision.git", tag = "v2.9.2" }
acesvision = { git = "ssh://git@github.com/aces-inc/aces-vision.git", branch = "feature/bbox_drawer_demo" }
acesvision_utils = { git = "ssh://git@github.com/aces-inc/aces-vision-utils.git", tag = "v0.1.1" }
acesutils = { git = "ssh://git@github.com/aces-inc/aces-utils.git", branch = "develop" } 
ffmpeg-python = "*"
filterpy = "*"
geopy = "*"
librosa = "*"
matplotlib="*"
numba = "*"
numpy="*"
opencv-contrib-python-headless = "*"
osmnx = "*"
pandas = "*"
Pillow = "*"
pyquaternion = "*"
PyYAML = "*"
scipy = "*"
shapely = "*"
staticmap="*"
tensorboard = "*"
scikit-image = "*"
tqdm = "*"
# libraries for object detection 3D
pycocotools = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
flake8 = "*"
flake8-commas = "*"
flake8-isort = "*"
flake8-quotes = "*"
jupyter = "*"
jupyterlab = "*"
pep8-naming = "==0.11.1"
registers = {git = "ssh://git@github.com/aces-inc/registers.git", tag = "v1.0.4"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
